# routes/api-v1.php
@@ -1,11 +1,13 @@
 <?php
 
 use Illuminate\Http\Request;
+use App\Models\admin\AboutCmpj;
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\Api\V1\PostApiController;
 use App\Http\Controllers\Api\V1\AboutApiController;
 use App\Http\Controllers\Api\V1\CategoryApiController;
 use App\Http\Controllers\Api\V1\ThematicApiController;
+use App\Http\Controllers\Api\V1\AboutCmpjApiController;
 use App\Http\Controllers\Api\V1\AboutObservatoryApiController;
 
 /*
@@ -28,7 +30,7 @@ Route::group(['middleware' => 'token.api.custom'], function () {
     Route::apiResource('posts', PostApiController::class)->names('posts');
     Route::apiResource('categories', CategoryApiController::class)->names('categories');
     Route::apiResource('sobre-observatorio', AboutObservatoryApiController::class)->names('about.observatory');
-    // Route::apiResource('sobre-cmpj', CategoryApiController::class)->names('about.cmpj');
+    Route::apiResource('sobre-cmpj', AboutCmpjApiController::class)->names('about.cmpj');
     // Route::apiResource('directiva', CategoryApiController::class)->names('directive');
     // Route::apiResource('logos', CategoryApiController::class)->names('logos');
     // Route::apiResource('politica-juventud', CategoryApiController::class)->names('youth-policy');
