# storage/api-docs/api-docs.json
@@ -6,6 +6,89 @@
         "version": "1.0.0"
     },
     "paths": {
+        "/api/v1/sobre-cmpj": {
+            "get": {
+                "tags": [
+                    "sobre-cmpj"
+                ],
+                "summary": "Listado de los sobre-cmpj",
+                "description": "Devuelve un listado de los sobre-cmpj que están registrados en nuestro servidor",
+                "operationId": "sobre-cmpj",
+                "parameters": [
+                    {
+                        "name": "sort",
+                        "in": "query",
+                        "description": "Campo por el cual ordenar los resultados. Agregar un signo '-' al principio para orden descendente (ej. -name).",
+                        "required": false,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Listado de los sobre-cmpj obtenido exitosamente."
+                    },
+                    "401": {
+                        "description": "No autorizado. Se requiere un token válido en el encabezado."
+                    },
+                    "403": {
+                        "description": "Token no provisto. Se requiere un token en el encabezado."
+                    },
+                    "500": {
+                        "description": "Error interno del servidor. Algo salió mal."
+                    }
+                },
+                "security": [
+                    {
+                        "bearer_token": []
+                    }
+                ]
+            }
+        },
+        "/api/v1/sobre-cmpj/{id}": {
+            "get": {
+                "tags": [
+                    "sobre-cmpj"
+                ],
+                "summary": "Obtener un sobre-cmpj por su ID",
+                "description": "Devuelve un sobre-cmpj específico por su ID.",
+                "operationId": "get_sobre-cmpj_by_id",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID de la sobre-cmpj a obtener.",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "sobre-cmpj obtenido exitosamente."
+                    },
+                    "401": {
+                        "description": "No autorizado. Se requiere un token válido en el encabezado."
+                    },
+                    "403": {
+                        "description": "Token no provisto. Se requiere un token en el encabezado."
+                    },
+                    "404": {
+                        "description": "sobre-cmpj no encontrado."
+                    },
+                    "500": {
+                        "description": "Error interno del servidor. Algo salió mal."
+                    }
+                },
+                "security": [
+                    {
+                        "bearer_token": []
+                    }
+                ]
+            }
+        },
         "/api/v1/categories": {
             "get": {
                 "tags": [
@@ -493,6 +576,10 @@
         }
     },
     "tags": [
+        {
+            "name": "sobre-cmpj",
+            "description": "Endpoints relacionados con los sobre-cmpj."
+        },
         {
             "name": "Categorías",
             "description": "Endpoints relacionados con las Categorías."
